# conquirere

./: .krazy  CMakeLists.txt  CTestConfig.cmake  DESIGN  Doxyfile.in  Mainpage.dox  README  TODO
html/: CMakeLists.txt  application.css  index.html  index_library.html  index_system.html
nbib/: CMakeLists.txt  DESIGN  bibo_mapping.txt  nbib-authors.docbook  nbib.trig  sync.ontology  sync.trig
ontology/: CMakeLists.txt  bibtex_mapping.txt  nbib.ontology  nbib.ontology.in  nbib.trig  sync.ontology.in  sync.trig
src/: CMakeLists.txt  conquirere.desktop  conquirere.kcfg  conquirereui.rc  globals.h  main.cpp  mainwindow.cpp  mainwindow.h
src/config/: CMakeLists.txt  bibglobals.cpp  bibglobals.h  conquirere.kcfg  conquirere.kcfgc
src/core/: CMakeLists.txt  backgroundsync.cpp  backgroundsync.h  bibtexexporter.cpp  bibtexexporter.h  bookmarkmodel.cpp  bookmarkmodel.h  dirwatcher.cpp  dirwatcher.h  documentmodel.cpp  documentmodel.h  htmldelegate.cpp  htmldelegate.h  library.cpp  library.h  librarymanager.cpp  librarymanager.h  nepomukmodel.cpp  nepomukmodel.h  notemodel.cpp  notemodel.h  project.cpp  project.h  projectsettings.cpp  projectsettings.h  publicationfiltermodel.cpp  publicationfiltermodel.h  publicationmodel.cpp  publicationmodel.h  ratingdelegate.cpp  ratingdelegate.h  resourcemodel.cpp  resourcemodel.h  searchresultmodel.cpp  searchresultmodel.h  starrating.cpp  starrating.h  tagcloud.cpp  tagcloud.h
src/dms-copy/: CMakeLists.txt  createresourcejob.cpp  createresourcejob.h  datamanagement.cpp  datamanagement.h  datamanagementinterface.h  dbustypes.cpp  dbustypes.h  describeresourcesjob.cpp  describeresourcesjob.h  genericdatamanagementjob.cpp  resourcewatcher.cpp  resourcewatcher.h  simpleresource.cpp  simpleresource.h  simpleresourcegraph.cpp  simpleresourcegraph.h  storeresourcesjob.cpp  storeresourcesjob.h
src/libnbibio/: conflictmanager.cpp  conflictmanager.h  encoderlatex.cpp  encoderlatex.h  nbibexporter.cpp  nbibexporter.h  nbibexporterbibtex.cpp  nbibexporterbibtex.h  nbibimporter.cpp  nbibimporter.h  nbibimporterbibtex.cpp  nbibimporterbibtex.h
src/mainui/: CMakeLists.txt  bibtexexportdialog.cpp  bibtexexportdialog.h  bibtexexportdialog.ui  bibteximportdialog.cpp  bibteximportdialog.h  bibteximportdialog.ui  bibteximportwizard.cpp  bibteximportwizard.h  documentpreview.cpp  documentpreview.h  librarymanager.cpp  librarymanager.h  librarywidget.cpp  librarywidget.h  loadproject.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  newprojectdialog.cpp  newprojectdialog.h  newprojectdialog.ui  newprojectwizard.cpp  newprojectwizard.h  projecttreedelegate.cpp  projecttreedelegate.h  projecttreewidget.cpp  projecttreewidget.h  projecttreewidget.ui  projectwidget.cpp  projectwidget.h  qlibrarytreewidgetitem.cpp  resourcemodel.cpp  resourcemodel.h  resourcetablewidget.cpp  resourcetablewidget.h  splashscreen.cpp  splashscreen.h  tableviewmenu.cpp  (+7 more)
src/nbibio/: CMakeLists.txt  backgroundsync.cpp  backgroundsync.h  bibfileexporter.cpp  bibfileexporter.h  bibfileimporter.cpp  bibfileimporter.h  conflictmanager.cpp  conflictmanager.h  nbibexporter.cpp  nbibexporter.h  nbibexporterbibtex.cpp  nbibexporterbibtex.h  nbibexporterfile.cpp  nbibexporterfile.h  nbibimporter.cpp  nbibimporter.h  nbibimporterbibtex.cpp  nbibimporterbibtex.h  nbibsync.cpp  nbibsync.h  nepomuksyncclient.cpp  nepomuksyncclient.h  storageglobals.h  synckbibtexfile.cpp  synckbibtexfile.h  synczoteronepomuk.cpp  synczoteronepomuk.h
src/onlinestorage/: CMakeLists.txt  TODO  providersettings.cpp  providersettings.h  providersettings.ui  readfromstorage.cpp  readfromstorage.h  storageglobals.h  storageinfo.h  syncstorage.cpp  syncstorage.h  syncstorageui.cpp  syncstorageui.h  syncstorageui.ui  writetostorage.cpp  writetostorage.h
src/propertywidgets/: CMakeLists.txt  adddataobject.cpp  adddataobject.h  adddataobject.ui  chapteredit.cpp  chapteredit.h  codeoflawedit.cpp  codeoflawedit.h  collectionedit.cpp  collectionedit.h  contactedit.cpp  contactedit.h  courtreporteredit.cpp  courtreporteredit.h  dateedit.cpp  dateedit.h  eventedit.cpp  eventedit.h  fileobjectedit.cpp  fileobjectedit.h  fileobjectedit.ui  fileobjecteditdialog.cpp  fileobjecteditdialog.h  fileobjecteditdialog.ui  issnedit.cpp  issnedit.h  issueedit.cpp  issueedit.h  journaledit.cpp  journaledit.h  kmultiitemedit.cpp  kmultiitemedit.h  organizationedit.cpp  organizationedit.h  proceedingsedit.cpp  proceedingsedit.h  propertyedit.cpp  propertyedit.h  publicationedit.cpp  publicationedit.h  (+10 more)
src/sidebar/: addchapterdialog.cpp  addchapterdialog.h  addchapterdialog.ui  contactdialog.cpp  contactdialog.h  contactdialog.ui  documentwidget.cpp  documentwidget.h  documentwidget.ui  eventwidget.cpp  listpartswidget.cpp  listpartswidget.h  listpartswidget.ui  listpublicationsdialog.cpp  listpublicationsdialog.h  listpublicationsdialog.ui  mergeresourceswidget.cpp  mergeresourceswidget.h  mergeresourceswidget.ui  notewidget.cpp  notewidget.h  notewidget.ui  publicationwidget.cpp  publicationwidget.h  publicationwidget.ui  referencewidget.cpp  referencewidget.h  referencewidget.ui  serieswidget.cpp  serieswidget.h  serieswidget.ui  sidebarcomponent.cpp  sidebarcomponent.h  sidebarwidget.cpp  sidebarwidget.h  sidebarwidget.ui
src/sro/: README  nepomuk-simpleresource-rcgen.py  sro.sh
tests/: CMakeLists.txt  testdatadir.h.in
tests/Benchmark-core.model/: CMakeLists.txt  coremodel.cpp
tests/Test-core.model/: CMakeLists.txt  coremodel.cpp
tests/Test-core.project/: CMakeLists.txt  coreproject.cpp
tests/Test-nbibio.bibtex2bibtex/: CMakeLists.txt  bibtexbibtex.cpp
tests/Test-nbibio.bibtex2nepomuk/: CMakeLists.txt  bibtexnepomuk.cpp
tests/Test-nbibio.bibtexvariant/: CMakeLists.txt  bibtexvarianttest.cpp
tests/Test-nbibio.nepomuk2bibtex/: CMakeLists.txt  nepomukbibtex.cpp
tests/Test-nbibio.nepomuk2variant/: CMakeLists.txt  nepomukvariant.cpp
tests/Test-nbibio.variant2nepomuk/: CMakeLists.txt  variantnepomuk.cpp
tests/Test-sync.zotero-read/: CMakeLists.txt  synczoteroread.cpp
tests/Test-zotero.data/: CMakeLists.txt  (+1 more)
(+606 files in other folders)
